syntax = "proto3";

package maven;

option java_package = "net.ollie.bus.deploy.maven";
option java_outer_classname = "MavenProtos";

message MavenRepositorySource {

    string id = 1;
    string repository = 2;
    MavenArtifact artifact = 3;

}

message MavenRepository {

    string id = 1;
    int32 version = 2;

    oneof definition {
        Nexus3Repository nexus3 = 10;
        MavenCentral central = 11;
    }

}

message Nexus3Repository {

    string url = 1;
    string username = 2;
    string password = 3;

}

message MavenCentral {

    string url = 1;

}

message MavenArtifact {

    string groupId = 1;
    string artifactId = 2;
    string version = 3;
    string classifier = 4;
    string type = 5;

}